adding pseudocode to the report

--- a/src/reports/report_1.ipynb
+++ b/src/reports/report_1.ipynb
@@ -51,6 +51,237 @@
   },
   {
    "cell_type": "markdown",
+   "id": "339bf370",
+   "metadata": {},
+   "source": [
+    "### 1. `randomSolution(Instance instance)`\n",
+    "**Purpose**: Generates a completely random solution by randomly selecting half the nodes and creating a random tour\n",
+    "<br>\n",
+    "\n",
+    "**How it works**:\n",
+    "- Randomly selects n/2 nodes from all available nodes\n",
+    "- Randomly shuffles the order of selected nodes to create a tour\n",
+    "- Calculates total cost (travel distance + node costs)\n",
+    "\n",
+    "```\n",
+    "FUNCTION randomSolution(instance):\n",
+    "    n = total number of nodes\n",
+    "    numToSelect = ceil(n / 2)\n",
+    "    \n",
+    "    shuffled = shuffle all nodes randomly\n",
+    "    selected = first numToSelect nodes from shuffled\n",
+    "    \n",
+    "    order = IDs of selected nodes\n",
+    "    shuffle order randomly\n",
+    "    \n",
+    "    totalDistance = 0\n",
+    "    FOR each consecutive pair (i, i+1) in order (wrapping around):\n",
+    "        totalDistance += distance from order[i] to order[i+1]\n",
+    "    \n",
+    "    totalNodeCost = sum of costs of selected nodes\n",
+    "    totalCost = totalDistance + totalNodeCost\n",
+    "    \n",
+    "    RETURN Solution(selected, order, totalCost, totalDistance)\n",
+    "END FUNCTION"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eab52cb6",
+   "metadata": {},
+   "source": [
+    "### 2. `nearestNeighborEndOnly(Instance instance)`\n",
+    "**Purpose**: Greedy construction heuristic that always adds the next node at the end of the tour, choosing the one that minimizes the objective increase\n",
+    "<br>\n",
+    "\n",
+    "**How it works**:\n",
+    "- Starts with a random node\n",
+    "- Iteratively adds nodes at the end position only\n",
+    "- Selects the node that minimally increases the objective (distance increase + node cost)\n",
+    "- Considers the cycle closure (last node back to first)\n",
+    "\n",
+    "\n",
+    "```\n",
+    "FUNCTION nearestNeighborEndOnly(instance):\n",
+    "    startNode = random node from all nodes\n",
+    "    selected = [startNode]\n",
+    "    order = [startNode.id]\n",
+    "    remaining = all nodes except startNode\n",
+    "    numToSelect = ceil(n / 2)\n",
+    "    \n",
+    "    WHILE selected.size < numToSelect AND remaining not empty:\n",
+    "        lastNode = last node in selected\n",
+    "        firstNode = first node in selected\n",
+    "        bestCandidate = null\n",
+    "        minIncrease = infinity\n",
+    "        \n",
+    "        FOR each candidate in remaining:\n",
+    "            distToCandidate = distance[lastNode][candidate]\n",
+    "            distCandidateToFirst = distance[candidate][firstNode]\n",
+    "            distLastToFirst = distance[lastNode][firstNode]\n",
+    "            \n",
+    "            distanceIncrease = distToCandidate + distCandidateToFirst - distLastToFirst\n",
+    "            objectiveIncrease = distanceIncrease + candidate.cost\n",
+    "            \n",
+    "            IF objectiveIncrease < minIncrease:\n",
+    "                minIncrease = objectiveIncrease\n",
+    "                bestCandidate = candidate\n",
+    "        \n",
+    "        IF bestCandidate exists:\n",
+    "            append bestCandidate to selected\n",
+    "            append bestCandidate.id to order\n",
+    "            remove bestCandidate from remaining\n",
+    "    \n",
+    "    calculate totalDistance and totalCost\n",
+    "    RETURN Solution(selected, order, totalCost, totalDistance)\n",
+    "END FUNCTION\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c103ad07",
+   "metadata": {},
+   "source": [
+    "### 3. `nearestNeighborAllPositions(Instance instance)`\n",
+    "**Purpose**: Enhanced greedy construction that considers inserting the next node at any position in the tour, not just the end\n",
+    "<br>\n",
+    "\n",
+    "**How it works**:\n",
+    "- Starts with a random node\n",
+    "- For each candidate node, tries inserting it at every possible position\n",
+    "- Selects the node-position combination that minimally increases the objective\n",
+    "- More sophisticated than `nearestNeighborEndOnly`\n",
+    "\n",
+    "\n",
+    "```\n",
+    "FUNCTION nearestNeighborAllPositions(instance):\n",
+    "    startNode = random node from all nodes\n",
+    "    selected = [startNode]\n",
+    "    order = [startNode.id]\n",
+    "    remaining = all nodes except startNode\n",
+    "    numToSelect = ceil(n / 2)\n",
+    "    \n",
+    "    WHILE selected.size < numToSelect AND remaining not empty:\n",
+    "        bestCandidate = null\n",
+    "        bestPosition = -1\n",
+    "        minIncrease = infinity\n",
+    "        \n",
+    "        FOR each candidate in remaining:\n",
+    "            FOR each position pos from 0 to order.size:\n",
+    "                prevNodeId = order[(pos - 1 + order.size) % order.size]\n",
+    "                nextNodeId = order[pos % order.size]\n",
+    "                \n",
+    "                distPrevToNext = distance[prevNodeId][nextNodeId]\n",
+    "                distPrevToCandidate = distance[prevNodeId][candidate]\n",
+    "                distCandidateToNext = distance[candidate][nextNodeId]\n",
+    "                \n",
+    "                distanceIncrease = distPrevToCandidate + distCandidateToNext - distPrevToNext\n",
+    "                objectiveIncrease = distanceIncrease + candidate.cost\n",
+    "                \n",
+    "                IF objectiveIncrease < minIncrease:\n",
+    "                    minIncrease = objectiveIncrease\n",
+    "                    bestCandidate = candidate\n",
+    "                    bestPosition = pos\n",
+    "        \n",
+    "        IF bestCandidate exists:\n",
+    "            insert bestCandidate at bestPosition in selected\n",
+    "            insert bestCandidate.id at bestPosition in order\n",
+    "            remove bestCandidate from remaining\n",
+    "    \n",
+    "    calculate totalDistance and totalCost\n",
+    "    RETURN Solution(selected, order, totalCost, totalDistance)\n",
+    "END FUNCTION\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1fa6008",
+   "metadata": {},
+   "source": [
+    "### 4. `greedyCycle(Instance instance, Node startNode)`\n",
+    "**Purpose**: Greedy cycle construction with a specified starting node, similar to `nearestNeighborAllPositions` but deterministic start\n",
+    "<br>\n",
+    "\n",
+    "**How it works**:\n",
+    "- Starts with a given node (not random)\n",
+    "- Iteratively inserts nodes at positions that minimize objective increase\n",
+    "- Evaluates all positions between consecutive nodes in the current tour\n",
+    "\n",
+    "\n",
+    "```\n",
+    "FUNCTION greedyCycle(instance, startNode):\n",
+    "    selected = [startNode]\n",
+    "    order = [startNode.id]\n",
+    "    remaining = all nodes except startNode\n",
+    "    numToSelect = ceil(n / 2)\n",
+    "    \n",
+    "    WHILE selected.size < numToSelect AND remaining not empty:\n",
+    "        bestCandidate = null\n",
+    "        bestPosition = -1\n",
+    "        minIncrease = infinity\n",
+    "        \n",
+    "        FOR each candidate in remaining:\n",
+    "            FOR each position pos from 0 to order.size - 1:\n",
+    "                prevNodeId = order[pos]\n",
+    "                nextNodeId = order[(pos + 1) % order.size]\n",
+    "                \n",
+    "                distPrevToNext = distance[prevNodeId][nextNodeId]\n",
+    "                distPrevToCandidate = distance[prevNodeId][candidate]\n",
+    "                distCandidateToNext = distance[candidate][nextNodeId]\n",
+    "                \n",
+    "                distanceIncrease = distPrevToCandidate + distCandidateToNext - distPrevToNext\n",
+    "                objectiveIncrease = distanceIncrease + candidate.cost\n",
+    "                \n",
+    "                IF objectiveIncrease < minIncrease:\n",
+    "                    minIncrease = objectiveIncrease\n",
+    "                    bestCandidate = candidate\n",
+    "                    bestPosition = pos + 1\n",
+    "        \n",
+    "        IF bestCandidate exists:\n",
+    "            insert bestCandidate at bestPosition in selected\n",
+    "            insert bestCandidate.id at bestPosition in order\n",
+    "            remove bestCandidate from remaining\n",
+    "    \n",
+    "    calculate totalDistance and totalCost\n",
+    "    RETURN Solution(selected, order, totalCost, totalDistance)\n",
+    "END FUNCTION"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3345d21c",
+   "metadata": {},
+   "source": [
+    "### 5. `generateSolutions(Instance instance)`\n",
+    "**Purpose**: Generates a large set of diverse solutions using all available construction methods\n",
+    "<br>\n",
+    "\n",
+    "**How it works**:\n",
+    "- Creates 200 random solutions\n",
+    "- For each node in the instance, generates one solution from each greedy method\n",
+    "- Returns a comprehensive collection of solutions for comparison or further optimization\n",
+    "\n",
+    "\n",
+    "```\n",
+    "FUNCTION generateSolutions(instance):\n",
+    "    solutions = empty list\n",
+    "    \n",
+    "    // Generate 200 random solutions\n",
+    "    FOR i from 0 to 199:\n",
+    "        solutions.add(randomSolution(instance))\n",
+    "    \n",
+    "    // Generate greedy solutions for each starting node\n",
+    "    FOR each startNode in instance.nodes:\n",
+    "        solutions.add(nearestNeighborEndOnly(instance))\n",
+    "        solutions.add(nearestNeighborAllPositions(instance))\n",
+    "        solutions.add(greedyCycle(instance, startNode))\n",
+    "    \n",
+    "    RETURN solutions\n",
+    "END FUNCTION\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e4bf2bf0",
    "metadata": {},
    "source": [
